--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ Here, we showcase four kinds of anonymized speech:
 (1)RS;
 (2)Average;
 (3)PSD;
-(4)GAN(N);
-(5)GAN(U);
-(6)IDMap-MLP(N);
-(7)IDMap-MLP(U);
-(8)IDMap-Diff(N);
-(9)IDMap-Diff(U);
+(4)GAN-N;
+(5)GAN-U;
+(6)MLP-N;
+(7)MLP-U;
+(8)Diff-N;
+(9)Diff-U;
 
 <h2>Libri-Dev Male</h2>
 <table>
@@ -42,12 +42,12 @@ Here, we showcase four kinds of anonymized speech:
             <th>RS</th>
             <th>Average</th>
             <th>PSD</th>
-            <th>GAN(N)</th>
-            <th>GAN(U)</th>
-            <th>IDMap-MLP(N)</th>
-            <th>IDMap-MLP(U)</th>
-            <th>IDMap-Diff(N)</th>
-            <th>IDMap-Diff(U)</th>  
+            <th>GAN-N</th>
+            <th>GAN-U</th>
+            <th>MLP-N</th>
+            <th>MLP-U</th>
+            <th>Diff-N</th>
+            <th>Diff-U</th>  
         </tr>
     </thead>
     <tbody>
@@ -71,32 +71,32 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(N)/wav/1272-128104-0000.wav">
+                    <source src="GAN-N/wav/1272-128104-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(U)/wav/1272-128104-0000.wav">
+                    <source src="GAN-U/wav/1272-128104-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(N)/wav/1272-128104-0000.wav">
+                    <source src="MLP-N/wav/1272-128104-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/1272-128104-0000.wav">
+                    <source src="MLP-U/wav/1272-128104-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-Diff(N)/wav/1272-128104-0000.wav">
+                    <source src="Diff-N/wav/1272-128104-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/1272-128104-0000.wav">
+                    <source src="MLP-U/wav/1272-128104-0000.wav">
                 </audio>
             </td>
         </tr>
@@ -120,32 +120,32 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(N)/wav/1272-128104-0002.wav">
+                    <source src="GAN-N/wav/1272-128104-0002.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(U)/wav/1272-128104-0002.wav">
+                    <source src="GAN-U/wav/1272-128104-0002.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(N)/wav/1272-128104-0002.wav">
+                    <source src="MLP-N/wav/1272-128104-0002.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/1272-128104-0002.wav">
+                    <source src="MLP-U/wav/1272-128104-0002.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-Diff(N)/wav/1272-128104-0002.wav">
+                    <source src="Diff-N/wav/1272-128104-0002.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/1272-128104-0002.wav">
+                    <source src="MLP-U/wav/1272-128104-0002.wav">
                 </audio>
             </td>
         </tr>
@@ -169,32 +169,32 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(N)/wav/174-168635-0004.wav">
+                    <source src="GAN-N/wav/174-168635-0004.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(U)/wav/174-168635-0004.wav">
+                    <source src="GAN-U/wav/174-168635-0004.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(N)/wav/174-168635-0004.wav">
+                    <source src="MLP-N/wav/174-168635-0004.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/174-168635-0004.wav">
+                    <source src="MLP-U/wav/174-168635-0004.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-Diff(N)/wav/174-168635-0004.wav">
+                    <source src="Diff-N/wav/174-168635-0004.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/174-168635-0004.wav">
+                    <source src="MLP-U/wav/174-168635-0004.wav">
                 </audio>
             </td>
         </tr>
@@ -218,32 +218,32 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(N)/wav/174-168635-0006.wav">
+                    <source src="GAN-N/wav/174-168635-0006.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(U)/wav/174-168635-0006.wav">
+                    <source src="GAN-U/wav/174-168635-0006.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(N)/wav/174-168635-0006.wav">
+                    <source src="MLP-N/wav/174-168635-0006.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/174-168635-0006.wav">
+                    <source src="MLP-U/wav/174-168635-0006.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-Diff(N)/wav/174-168635-0006.wav">
+                    <source src="Diff-N/wav/174-168635-0006.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/174-168635-0006.wav">
+                    <source src="MLP-U/wav/174-168635-0006.wav">
                 </audio>
             </td>
         </tr>
@@ -259,12 +259,12 @@ Here, we showcase four kinds of anonymized speech:
             <th>RS</th>
             <th>Average</th>
             <th>PSD</th>
-            <th>GAN(N)</th>
-            <th>GAN(U)</th>
-            <th>IDMap-MLP(N)</th>
-            <th>IDMap-MLP(U)</th>
-            <th>IDMap-Diff(N)</th>
-            <th>IDMap-Diff(U)</th>  
+            <th>GAN-N</th>
+            <th>GAN-U</th>
+            <th>MLP-N</th>
+            <th>MLP-U</th>
+            <th>Diff-N</th>
+            <th>Diff-U</th>  
         </tr>
     </thead>
     <tbody>
@@ -288,32 +288,32 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(N)/wav/84-121123-0000.wav">
+                    <source src="GAN-N/wav/84-121123-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(U)/wav/84-121123-0000.wav">
+                    <source src="GAN-U/wav/84-121123-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(N)/wav/84-121123-0000.wav">
+                    <source src="MLP-N/wav/84-121123-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/84-121123-0000.wav">
+                    <source src="MLP-U/wav/84-121123-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-Diff(N)/wav/84-121123-0000.wav">
+                    <source src="Diff-N/wav/84-121123-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/84-121123-0000.wav">
+                    <source src="MLP-U/wav/84-121123-0000.wav">
                 </audio>
             </td>
         </tr>
@@ -337,32 +337,32 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(N)/wav/84-121123-0001.wav">
+                    <source src="GAN-N/wav/84-121123-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(U)/wav/84-121123-0001.wav">
+                    <source src="GAN-U/wav/84-121123-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(N)/wav/84-121123-0001.wav">
+                    <source src="MLP-N/wav/84-121123-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/84-121123-0001.wav">
+                    <source src="MLP-U/wav/84-121123-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-Diff(N)/wav/84-121123-0001.wav">
+                    <source src="Diff-N/wav/84-121123-0001.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/84-121123-0000.wav">
+                    <source src="MLP-U/wav/84-121123-0000.wav">
                 </audio>
             </td>
         </tr>
@@ -386,32 +386,32 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(N)/wav/1462-170138-0000.wav">
+                    <source src="GAN-N/wav/1462-170138-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(U)/wav/1462-170138-0000.wav">
+                    <source src="GAN-U/wav/1462-170138-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(N)/wav/1462-170138-0000.wav">
+                    <source src="MLP-N/wav/1462-170138-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/1462-170138-0000.wav">
+                    <source src="MLP-U/wav/1462-170138-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-Diff(N)/wav/1462-170138-0000.wav">
+                    <source src="Diff-N/wav/1462-170138-0000.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/1462-170138-0000.wav">
+                    <source src="MLP-U/wav/1462-170138-0000.wav">
                 </audio>
             </td>
         </tr>
@@ -435,32 +435,32 @@ Here, we showcase four kinds of anonymized speech:
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(N)/wav/1462-170138-0003.wav">
+                    <source src="GAN-N/wav/1462-170138-0003.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="GAN(U)/wav/1462-170138-0003.wav">
+                    <source src="GAN-U/wav/1462-170138-0003.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(N)/wav/1462-170138-0003.wav">
+                    <source src="MLP-N/wav/1462-170138-0003.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/1462-170138-0003.wav">
+                    <source src="MLP-U/wav/1462-170138-0003.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-Diff(N)/wav/1462-170138-0003.wav">
+                    <source src="Diff-N/wav/1462-170138-0003.wav">
                 </audio>
             </td>
             <td>
                 <audio controls="">
-                    <source src="IDMap-MLP(U)/wav/1462-170138-0003.wav">
+                    <source src="MLP-U/wav/1462-170138-0003.wav">
                 </audio>
             </td>
         </tr>
