--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@ Here, we showcase four kinds of anonymized speech:
 (7)MLP-U;
 (8)Diff-N;
 (9)Diff-U;
+In addition, the original audio will be provided for comparison.
 
 <h2>Libri-Dev Male</h2>
 <table>
     <thead>
         <tr>
             <th>Audio Name</th>
+            <th>Original</th>
             <th>RS</th>
             <th>Average</th>
             <th>PSD</th>
@@ -54,6 +56,11 @@ Here, we showcase four kinds of anonymized speech:
         <!-- 第一行 -->
         <tr>
             <td>1272-128104-0000</td> <!-- 音频名称 -->
+            <td>
+                <audio controls="">
+                    <source src="sample/Original/1272-128104-0000.wav">
+                </audio>
+            </td>
             <td>
                 <audio controls="">
                     <source src="sample/RS/wav/1272-128104-0000.wav">
@@ -105,6 +112,11 @@ Here, we showcase four kinds of anonymized speech:
             <td>1272-128104-0002</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
+                    <source src="sample/Original/1272-128104-0002.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
                     <source src="sample/RS/wav/1272-128104-0002.wav">
                 </audio>
             </td>
@@ -154,6 +166,11 @@ Here, we showcase four kinds of anonymized speech:
             <td>174-168635-0004</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
+                    <source src="sample/Original/174-168635-0004.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
                     <source src="sample/RS/wav/174-168635-0004.wav">
                 </audio>
             </td>
@@ -201,6 +218,11 @@ Here, we showcase four kinds of anonymized speech:
         <!-- 第四行 -->
         <tr>
             <td>174-168635-0006</td> <!-- 音频名称 -->
+            <td>
+                <audio controls="">
+                    <source src="sample/Original/174-168635-0006.wav">
+                </audio>
+            </td>
             <td>
                 <audio controls="">
                     <source src="sample/RS/wav/174-168635-0006.wav">
@@ -255,6 +277,7 @@ Here, we showcase four kinds of anonymized speech:
 <table>
     <thead>
         <tr>
+            <th>Original</th>
             <th>Audio Name</th>
             <th>RS</th>
             <th>Average</th>
@@ -271,6 +294,11 @@ Here, we showcase four kinds of anonymized speech:
         <!-- 第一行 -->
         <tr>
             <td>84-121123-0000</td> <!-- 音频名称 -->
+            <td>
+                <audio controls="">
+                    <source src="sample/Original/84-121123-0000.wav">
+                </audio>
+            </td>
             <td>
                 <audio controls="">
                     <source src="sample/RS/wav/84-121123-0000.wav">
@@ -322,6 +350,11 @@ Here, we showcase four kinds of anonymized speech:
             <td>84-121123-0001</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
+                    <source src="sample/Original/84-121123-0001.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
                     <source src="sample/RS/wav/84-121123-0001.wav">
                 </audio>
             </td>
@@ -371,6 +404,11 @@ Here, we showcase four kinds of anonymized speech:
             <td>1462-170138-0000</td> <!-- 音频名称 -->
             <td>
                 <audio controls="">
+                    <source src="sample/Original/1462-170138-0000.wav">
+                </audio>
+            </td>
+            <td>
+                <audio controls="">
                     <source src="sample/RS/wav/1462-170138-0000.wav">
                 </audio>
             </td>
@@ -418,6 +456,11 @@ Here, we showcase four kinds of anonymized speech:
         <!-- 第四行 -->
         <tr>
             <td>1462-170138-0003</td> <!-- 音频名称 -->
+            <td>
+                <audio controls="">
+                    <source src="sample/Original/1462-170138-0003.wav">
+                </audio>
+            </td>
             <td>
                 <audio controls="">
                     <source src="sample/RS/wav/1462-170138-0003.wav">
